# snipseq

./: README.md  pyproject.toml  snipseqMatch.md
snipseqAssign/: snipseqAssign.md  snipseqAssign_README.md
snipseqMatch/: snipseqMatch_README.md
src/snipseq/: adv.py  bsc.py  cli.py  demux.py  logger.py  utils.py
